# python-web-scrapper

./: indeed.py  jobs.csv  main.py  pyproject.toml  save.py  so.py
templates/: home.html  report.html
